[gd_scene load_steps=9 format=2]

[ext_resource path="res://StateMachine/Card/CardBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]
[ext_resource path="res://HandPositioning.gd" type="Script" id=3]
[ext_resource path="res://DrawCard.gd" type="Script" id=4]
[ext_resource path="res://CardsManager.gd" type="Script" id=5]
[ext_resource path="res://PlayerStatsInfo.gd" type="Script" id=6]
[ext_resource path="res://DebugDraw.gd" type="Script" id=7]
[ext_resource path="res://CardTracker.gd" type="Script" id=8]

[node name="BoardBase" type="Node2D"]

[node name="DrawCard" type="TextureButton" parent="."]
margin_left = 935.0
margin_top = 374.0
margin_right = 999.0
margin_bottom = 438.0
texture_normal = ExtResource( 2 )
script = ExtResource( 4 )

[node name="CardsManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CardBase" parent="CardsManager" instance=ExtResource( 1 )]

[node name="CardBase2" parent="CardsManager" instance=ExtResource( 1 )]

[node name="CardBase3" parent="CardsManager" instance=ExtResource( 1 )]

[node name="CardBase4" parent="CardsManager" instance=ExtResource( 1 )]

[node name="CardBase5" parent="CardsManager" instance=ExtResource( 1 )]

[node name="CardBase6" parent="CardsManager" instance=ExtResource( 1 )]

[node name="CardBase7" parent="CardsManager" instance=ExtResource( 1 )]

[node name="HandPositioning" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="HandPositioning"]
texture = ExtResource( 2 )

[node name="DebugDraw" type="Control" parent="HandPositioning"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="PlayerStatsInfo" type="Node" parent="."]
script = ExtResource( 6 )

[node name="CardTracker" type="Label" parent="."]
margin_left = 858.0
margin_top = 50.0
margin_right = 898.0
margin_bottom = 64.0
script = ExtResource( 8 )

[connection signal="draw_cards" from="DrawCard" to="CardsManager" method="_on_DrawCard_draw_cards"]
